--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: backend-container
-          image: bhargavjupalli/backend-app:20250427183620
+          image: diyachan/backend-app:20250429114044
           ports:
             - containerPort: 8088  # Updated to match the port Spring Boot app is using
 ---
